floating window element style base

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -16,6 +16,7 @@
 @use 'elements/backgrounds';
 @use 'elements/forms';
 @use 'elements/canvas';
+@use 'elements/floating';
 
 * {
     transition: background-color 0.1s ease-in-out, color 0.1s ease-in-out, shadow 0.1s ease-in-out, border-color 0.1s ease-in-out;
