--- a/scss/style.scss
+++ b/scss/style.scss
@@ -18,6 +18,7 @@
 @use 'elements/canvas';
 @use 'elements/floating';
 @use 'elements/fade';
+@use 'elements/popup';
 
 * {
     transition: background-color 0.1s ease-in-out, color 0.1s ease-in-out, shadow 0.1s ease-in-out, border-color 0.1s ease-in-out;
