implement html component compilation and minor fixes

--- a/html/components/content.html
+++ b/html/components/content.html
@@ -1,32 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SlateUI Demo</title>
-    <link rel="stylesheet" type="text/css" href="css/slate.css">
-    <link rel="icon" href="img/favicon.png">
-</head>
-
-<body class="fill tertiary no-scrollbar">
-
-    <header class="w-10 p-t-5 m-b-xl">
+<header class="w-10 p-t-5 m-b-xl">
     <div class="banner sticky fill transparent m-b-1 p-2">
         <h1>SlateUI Demo</h1>
-        <nav class="link-row">
-    <div class="link-row-group">
-        <a class="link fill">
-            Home
-        </a>
-        <a class="link fill">
-            About
-        </a>
-        <a class="link fill">
-            Contact
-        </a>
-    </div>
-</nav>
+        <!--nav-->
     </div>
 </header>
 
@@ -204,9 +179,3 @@
         </div>
     </div>
 </footer>
-
-
-    <script type="module" src="js/slate.js"></script>
-</body>
-
-</html>
