Add additional gradients

--- a/html/components/index.html
+++ b/html/components/index.html
@@ -13,6 +13,8 @@
 
     <!--$content-->
 
+    <div class="screen-overlay fade-radial"></div>
+
     <script type="module" src="js/slate.js"></script>
 </body>
 
