--- a/scss/elements/_fade.scss
+++ b/scss/elements/_fade.scss
@@ -6,4 +6,96 @@
 .fade {
     width: 100vw;
     height: 100vh;
+    background: linear-gradient(variables.$alpha, variables.$white);
+
+    &-down {
+        background: linear-gradient(variables.$alpha, variables.$white);
+    }
+
+    &-up {
+        background: linear-gradient(variables.$white, variables.$alpha);
+    }
+
+    &-left {
+        background: linear-gradient(270deg, variables.$alpha, variables.$white);
+    }
+
+    &-right {
+        background: linear-gradient(90deg, variables.$alpha, variables.$white);
+    }
+
+    &-horizontal {
+        background: linear-gradient(variables.$alpha, variables.$white, variables.$alpha);
+
+        &-outside {
+            background: linear-gradient(variables.$white, variables.$alpha, variables.$white);
+        }
+    }
+
+    &-vertical {
+        background: linear-gradient(90deg, variables.$alpha, variables.$white, variables.$alpha);
+
+        &-outside {
+            background: linear-gradient(90deg, variables.$white, variables.$alpha, variables.$white);
+        }
+    }
+
+    &-outside {
+        background: linear-gradient(variables.$white, variables.$alpha, variables.$white), linear-gradient(90deg, variables.$white, variables.$alpha, variables.$white);
+    }
+
+    &-radial {
+        background: radial-gradient(variables.$white 30%, variables.$alpha);
+    }
 }
+
+
+@each $name, $theme in variables.$themes {
+    $colours: map.get($theme, "colours");
+    $primary: map.get($colours, "primary");
+
+    .#{$name}.fade {
+        background: linear-gradient(variables.$alpha, $primary);
+
+        &-down {
+            background: linear-gradient(variables.$alpha, $primary);
+        }
+    
+        &-up {
+            background: linear-gradient($primary, variables.$alpha);
+        }
+    
+        &-left {
+            background: linear-gradient(270deg, variables.$alpha, $primary);
+        }
+    
+        &-right {
+            background: linear-gradient(90deg, variables.$alpha, $primary);
+        }
+    
+        &-horizontal {
+            background: linear-gradient(variables.$alpha, $primary, variables.$alpha);
+    
+            &-outside {
+                background: linear-gradient($primary, variables.$alpha, $primary);
+            }
+        }
+    
+        &-vertical {
+            background: linear-gradient(90deg, variables.$alpha, $primary, variables.$alpha);
+    
+            &-outside {
+                background: linear-gradient(90deg, $primary, variables.$alpha, $primary);
+            }
+        }
+    
+        &-outside {
+            background: linear-gradient($primary, variables.$alpha, $primary), linear-gradient(90deg, $primary, variables.$alpha, $primary);
+        }
+    
+        &-radial {
+            background: radial-gradient($primary 30%, variables.$alpha);
+        }
+    }
+}
+
