--- a/scss/style.scss
+++ b/scss/style.scss
@@ -62,7 +62,7 @@ body {
     right: 0.1em;
     width: 0.5em;
     height: calc(100vh - 0.2em);
-    z-index: 9999;
+    z-index: 10000;
 }
 
 .scroll-handle {
@@ -73,7 +73,7 @@ body {
     width: 100%;
     height: 10em;
     background-color: rgba(127, 127, 127, 0.7);
-    z-index: 9999;
+    z-index: 10000;
 }
 
 .background {
@@ -95,17 +95,11 @@ body {
     height: min-content;
 }
 
-.screen-fade {
-    width: 100vw;
-    background: linear-gradient(variables.$alpha, variables.$white);
-
-    &.dark {
-        background: linear-gradient(variables.$alpha-dark, variables.$black);
-    }
-}
-
 .screen-overlay {
-    position: absolute;
+    z-index: 900;
+    position: fixed;
+    top: 0;
+    left: 0;
     width: 100vw;
     min-height: 100vh;
 }
