demo expanding elements

--- a/html/components/content.html
+++ b/html/components/content.html
@@ -131,19 +131,31 @@
         </div>
     </div>
 
-    <div class="f-c-s f-g-1 m-h-l m-b-m p-s shadow-1 fill transparent">
+    <div class="f-c-s f-g-1 m-h-l m-b-m p-s border-1 fill transparent">
         <div class="f-r-t shrink-xl">
             <div class="f-c-s">
-                <img class="image fill m-v-2" src="img/icon.png" alt="img" width="50">
+                <div class="expand m-v-2">
+                    <div class="box fill">
+                        <img class="image no-shadow size-4em" src="img/icon.png" alt="img">
+                    </div>
+                </div>
                 <div class="expand m-v-2">
                     <div class="box">
                         <div class="f size-4em">Test</div>
                     </div>
                 </div>
-                <div class="box border-2 no-shadow m-v-2">Test</div>
+                <div class="expand m-v-2">
+                    <div class="box border-1 no-shadow">
+                        <div class="f size-4em">Test</div>
+                    </div>
+                </div>
             </div>
             <div class="f-c-s">
-                <div class="box fill gradient m-v-2">Test</div>
+                <div class="expand m-v-2">
+                    <div class="box fill gradient">
+                        <div class="f size-4em">Test</div>
+                    </div>
+                </div>
                 <div class="expand m-v-2">
                     <div class="box fill gradient-hover-animation">
                         <div class="f size-4em">Test</div>
